--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   table_calendar: ^3.1.3
+  time_picker_spinner_pop_up: ^2.0.0
+  cupertino_calendar_picker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
